Fixed wrongly positioned icon when right aligned on buttons

--- a/client/app/styles/app.scss
+++ b/client/app/styles/app.scss
@@ -16,6 +16,10 @@ a {
 
 /* Semantic UI */
 
+.ui[class*="right labeled"].icon.button > .icon {
+  right: .25em !important;
+}
+
 // To use absolute position labels
 table.ui.table td {
   position: relative;
